--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -30,15 +30,16 @@
                   Services
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Scoups</a></li>
+                  <li><a class="dropdown-item" href="#">Scoops</a></li>
                   <li><a class="dropdown-item" href="#">Softy</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="#">Family pack</a></li>
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                <a class="nav-link" href="#">Contact Us</a>
               </li>
+              
             </ul>
             <form class="d-flex">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
